--- a/LOTAWeb/Views/Shared/_Layout.cshtml
+++ b/LOTAWeb/Views/Shared/_Layout.cshtml
@@ -149,13 +149,13 @@
                         </a>
                     </li>
                     <li class="nav-item mb-2">
-                        <a class="nav-link text-dark d-flex align-items-center py-2 px-3 rounded nav-main-item" href="#">
+                        <a class="nav-link text-dark d-flex align-items-center py-2 px-3 rounded nav-main-item" asp-area="Admin" asp-controller="LOScore" asp-action="Index">
                             <i class="fas fa-list me-3"></i>
                             LO Scores
                         </a>
                     </li>
                     <li class="nav-item mb-2">
-                        <a class="nav-link text-dark d-flex align-items-center py-2 px-3 rounded nav-main-item" href="#">
+                        <a class="nav-link text-dark d-flex align-items-center py-2 px-3 rounded nav-main-item" asp-area="Admin" asp-controller="LOResult" asp-action="Index">
                             <i class="fas fa-chart-line me-3"></i>
                             LO Results
                         </a>
